Firefox clears the system clipboard when the application exits
Categories
(Core :: Widget: Cocoa, defect, P2)
Tracking
()
People
(Reporter: cpeterson, Assigned: m_kato)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
RyanVM
:
approval-mozilla-release+
|
Details | Review |
This bug is a regression in Firefox 101 from bug 666254.
Makoto, your fix for bug 666254 causes Firefox on macOS to clear the system clipboard when you exit Firefox. Is clearing the system clipboard intentional? Firefox on Windows doesn't do this when it exits and neither Chrome nor Safari on macOS do they exit.
Steps to reproduce
- Open a page in Firefox version >= 101 on macOS.
- Copy some text from the page. Paste the copied text into another application to verify that the text was successfully copied.
- Quit Firefox.
- Try to paste the copied text into the other application again.
Expected result
You should be able to paste the copied text into the other application again.
Actual result
You can't paste the copied text into the other application again because Firefox cleared the system clipboard when it exits. Firefox on Windows doesn't do this when it exits, only Firefox on macOS.
Assignee | ||
Comment 1•8 months ago
|
||
https://searchfox.org/mozilla-central/rev/32ca4fc265150e7d3d7aa6c6abea088768cf024b/widget/cocoa/nsClipboard.mm#66-67 seems to be unnecessary.
Updated•8 months ago
|
Updated•8 months ago
|
Assignee | ||
Comment 2•8 months ago
|
||
This is regression by bug 666254. We shouldn't call
nsClipborad::EmptyClipboard()
in destructor. Cached nsITransferable
will
be cleared by nsBaseClipboard()'s destructor.
Comment 3•8 months ago
|
||
Seems like something we'd probably want to consider taking in a dot release.
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/fcab49b12871 Don't clear system clipboard when exiting Firefox. r=mac-reviewers,spohl
Comment 5•8 months ago
|
||
bugherder |
Reporter | ||
Comment 6•8 months ago
|
||
[Tracking Requested - why for this release]:
Setting status-firefox101=fix-optional. I don't think this regression is serious enough to drive a 101.x dot release, but it might be a good candidate for a ride-along. I do think we should uplift this fix to Beta 102 and ESR 102.
Comment 7•8 months ago
|
||
Please request the uplift to beta, thanks.
Assignee | ||
Comment 8•8 months ago
|
||
Comment on attachment 9279051 [details]
Bug 1771823 - Don't clear system clipboard when exiting Firefox. r=#mac-reviewers
Beta/Release Uplift Approval Request
- User impact if declined: When exiting Firefox, system's clipboard becomes empty
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: 1. Open any web site
- Copy any word using [Command] + [C]
- Quit Firefox
- Paste text to any application
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Remove unnecessary cleanup of clipboard.
- String changes made/needed: N/A
- Is Android affected?: No
Assignee | ||
Updated•8 months ago
|
Updated•8 months ago
|
Comment 9•8 months ago
|
||
Reproducible on Firefox 102.0b1(20220530132252) on macOS 11. Verified as fixed on Nightly 103.0a1(20220605213032) on macOS 11.
Assignee | ||
Comment 10•8 months ago
|
||
Comment on attachment 9279051 [details]
Bug 1771823 - Don't clear system clipboard when exiting Firefox. r=#mac-reviewers
Beta/Release Uplift Approval Request
- User impact if declined: When exiting Firefox, system's clipboard becomes empty
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: 1. Open any web site
- Copy any word using [Command] + [C]
- Quit Firefox
- Paste text to any application
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Remove unnecessary cleanup of clipboard.
- String changes made/needed: N/A
- Is Android affected?: No
Comment 11•8 months ago
|
||
Comment on attachment 9279051 [details]
Bug 1771823 - Don't clear system clipboard when exiting Firefox. r=#mac-reviewers
Approved for 102 beta 5, thanks.
Comment 12•8 months ago
|
||
bugherderuplift |
Updated•8 months ago
|
Comment 13•8 months ago
|
||
Hello,
I confirm the fix is verified on Firefox 102.0b5(20220607212916) on macOS 11.
Comment 14•8 months ago
|
||
Comment on attachment 9279051 [details]
Bug 1771823 - Don't clear system clipboard when exiting Firefox. r=#mac-reviewers
Approved for 101.0.1.
Comment 15•8 months ago
|
||
bugherderuplift |
Comment 16•8 months ago
|
||
Added to the 101.0.1 relnotes:
Fixed Firefox clearing the clipboard when closing on macOS
Comment 17•8 months ago
|
||
Hello,
I confirm this fix is verified on Firefox 101.0.1(20220608170832) on macOS 11.
Comment 18•7 months ago
|
||
Hello, I confirm this fix is verified on Firefox 102esr(20220623064521) on macOS 11.
Comment 19•7 months ago
|
||
Hello,
I encountered this error in Firefox 103.0b7 on Ubuntu 22.04. This is not reproducible is Firefox 103.0b6, nor the latest nightly. Should I file a new bug for Ubuntu?
Assignee | ||
Comment 20•7 months ago
|
||
(In reply to Ardelean Oana from comment #19)
Hello,
I encountered this error in Firefox 103.0b7 on Ubuntu 22.04. This is not reproducible is Firefox 103.0b6, nor the latest nightly. Should I file a new bug for Ubuntu?
Yes, please file new issue.
Description
•