Bug 1771823 - Don't clear system clipboard when exiting Firefox. r=mac-reviewers,spohl a=pascalc

This is regression by bug 666254. We shouldn't call
`nsClipborad::EmptyClipboard()` in destructor. Cached `nsITransferable` will
be cleared by nsBaseClipboard()'s destructor.

Differential Revision: https://phabricator.services.mozilla.com/D147834